--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -35,6 +35,7 @@
                     </div>
                     
                 </div>
+
                 <!-- descripcion -->
                 <div class="form-group">
                     <label for="sell_description">Hace una breve despricion de lo que vas a vender</label>
@@ -59,7 +60,7 @@
                     <!-- envios -->
                     <div class="col-3">
                         <div class="custom-control custom-checkbox mr-sm-2">
-                            <input type="checkbox" class="custom-control-input" id="sell_envios" name="envio" required> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="checkbox" class="custom-control-input" id="sell_envios" name="envio" > <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             <label class="custom-control-label" for="sell_envios">Puedo hacer envios!</label> 
                         </div>
                     </div>
@@ -72,21 +73,23 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Marca</p>
                         <div class="custom-file">
-                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title" id="marca" name="marca" required/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title" id="marca" name="marca" />
                             
                         </div>
                     </div>
+                    <!-- Ibu -->
                     <div class="form-group col-4" id="ibu" style="display:none;">
                         <p class="mb-1">Ibu</p>
                         <div class="custom-file">
-                            <input type="number" class="form-control" aria-describedby="sell_title"  name="ibu" required/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                            <input type="number" class="form-control" aria-describedby="sell_title"  name="ibu" /> 
                             
                         </div>
                     </div>
+                     <!-- Alcohol -->
                     <div class="form-group col-4" id="alcohol" style="display:none;">
                         <p class="mb-1">Alcohol %</p>
                         <div class="custom-file">
-                            <input type="number" class="form-control"  aria-describedby="sell_title" id="alcohol" name="alcohol" required/>
+                            <input type="number" class="form-control"  aria-describedby="sell_title" id="alcohol" name="alcohol" />
                             
                         </div>
                     </div>
@@ -121,7 +124,7 @@
                     </div>
                     <!-- presentacion -->
                     <div class="form-group col-4" id="presentacion" style="display:none;">
-                        <label for="sell_container" required>Presentación</label>
+                        <label for="sell_container" >Presentación</label>
                         <select class="form-control" name="presentacion" id="presentacion" >
                                 
                             <option selected>Seleccione...</option>
@@ -193,6 +196,7 @@
                 <div class="dropdown-divider"></div>
 
                 <div class="row align-items-center justify-content-between bg-light m-1">
+                    
                     <!-- precio -->
                     <div class="form-group col-3">
                         <label for="sell_price"><i class="fas fa-hand-holding-usd"></i> Precio Unidad</label>
