--- a/views/edit-insumos.ejs
+++ b/views/edit-insumos.ejs
@@ -106,7 +106,7 @@
                     </div>
 
                     <!-- imagen2 -->
-                    <div class="form-group col-4">
+                    <div class="form-group col-4" style="display:none;"> 
                         <p class="mb-1">Segunda Imagen<em></em></p>
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" id="sell_image_2" lang="es" disabled/> <!-- se encuentra deshabilitado hasta la implementacion de campos en tabla -->
@@ -115,7 +115,7 @@
                     </div>
 
                     <!-- imagen3 -->
-                    <div class="form-group col-4">
+                    <div class="form-group col-4" style="display:none;">
                         <p class="mb-1">Tercera imagen<em></em></p>
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" id="sell_image_3" lang="es" disabled/> <!-- se encuentra deshabilitado hasta la implementacion de campos en tabla -->
