--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -7,6 +7,8 @@
     
     <!--header/javi -->
     <%- include("partials/header") %>
+
+    
     
     <section class="container mt-5 mb-5">
         <div class="row">
@@ -21,12 +23,27 @@
                 </div>
                 <div class="dropdown-divider"></div>
 
+                <!-- Validacion BackEnd -->
+                <div class="col-12 errors text-danger">
+                    <% if( typeof errors != "undefined") { %>
+                    <p class="error-msg">Verificar errores encontrados:</p>
+                    <ul>
+                      <% for (let i=0; i<errors.length; i++) {%>
+                      <li>
+                        <%= errors[i].msg %>
+                      </li>
+                      <% } %>
+                    </ul>
+                    <% } %>
+                  </div>
+
                 <!-- titulo de venta -->
                 <h4 class="mb-4 mt-4">¿Qué es lo que estas vendiendo?</h4>
                 <div class="row align-items-center">
                     <div class="form-group col-9">
                         <label for="nombre">Título del Anuncio</label>
                         <input type="text" class="form-control"  placeholder="Introduce el nombre de tu producto" aria-describedby="sell_title" name="nombre" id="nombre"/>
+
                         
                     <div id="validacion_nombre" class="text-danger"></div>
 
@@ -120,6 +137,7 @@
                             <option>Especiales</option>
                         </select>
                     </div>
+                    
                     <!-- presentacion -->
                     <div class="form-group col-4" id="presentacion" style="display:none;">
                         <label for="sell_container" >Presentación</label>
@@ -245,7 +263,7 @@
 
     
 
-    <script src="/js/validacionCrearProducto.js"></script>
+    <!-- <script src="/js/validacionCrearProducto.js"></script> -->
     <script src="/js/tipoProducto.js"></script>
 
     
