update de productos y borrar productos funcionan

--- a/views/inexistent.ejs
+++ b/views/inexistent.ejs
@@ -6,13 +6,13 @@
 
         <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn">
             <div class="card mb-5 mt-5" style="width: 20rem;">
-                <img src="https://media1.tenor.com/images/138aed5d9c9056183cd874bc8dd31979/tenor.gif?itemid=9628120" class="card-img-top p-2" alt="...">
+                <img src="https://media1.tenor.com/images/dcce44122c287cdee16b1e880d49d094/tenor.gif?itemid=7855872" class="card-img-top p-2" alt="...">
                 <div class="card-body">
-                <h5 class="card-title">No tienes accesos</h5>
-                <p class="card-text">...no tenes nada que hacer acá, anda a registrarte!</p>
+                <h5 class="card-title">Usuario no registado</h5>
+                <p class="card-text">Te invitamos a registrarte, para poder ser parte de esta comunidad Cervecera!</p>
                 <div class="mt-5 mb-2">
-                <a href="/auth/register" class="btn btn-outline-warning mr-2"> <i class="far fa-user-circle"></i> Regitrate!</a>
-                <a href="/auth/login" class="btn btn-outline-secondary ml-2"> <i class="far fa-user-circle"></i> inicia Sesión!</a>
+                <a href="/auth/register" class="btn btn-outline-warning m-auto"> <i class="far fa-user-circle"></i> Regitrate!</a>
+                
                 </div>
             </div>
         </section>
