--- a/views/edit-cursos.ejs
+++ b/views/edit-cursos.ejs
@@ -14,7 +14,12 @@
 
 
             <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" 
-            action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar()">
+            action="/products/<%= product.id %>/edit/" 
+            method="POST"
+            enctype="multipart/form-data" 
+            id="form" 
+            onsubmit="return validar()">
+
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
@@ -55,7 +60,7 @@
                     <!-- tipo de Producto-->
                     <div class="form-group col-4 mb-4">
                         <label for=""><i class="fas fa-layer-group"></i> Tipo de Producto</label> </br>
-                            <p id="productoId" class="p-2 border rounded bg-light">
+                            <p id="productoId" value="<%= product.tipoproducto %>" class="p-2 border rounded bg-light">
                                 <% if (product.tipoproducto == 1){ %>
                                     Bebidas
                                 <% } %>
@@ -142,18 +147,30 @@
                             aria-describedby="sell_price" 
                             name="precioUnitario" 
                             id="precioUnitario" 
-                            placeholder="<%= product.precioUnitario  %>" />
+                            value="<%= product.precioUnitario  %>"
+                            placeholder="<%= product.precioUnitario %>" />
                     </div>
                     <!-- cantidad -->
                     <div class="form-group col-3">
                         <label for="sell_quantity">Vacantes</label>
-                        <input type="number" class="form-control" aria-describedby="sell_quantity"
-                            name="stock" id="stock" placeholder="<%= product.stock  %>"/>
+                        <input type="number" 
+                        class="form-control" 
+                        aria-describedby="sell_quantity"
+                        name="stock" 
+                        id="stock" 
+                        value="<%= product.stock %>"
+                        placeholder="<%= product.stock %>"/>
                     </div>
                     <!-- descuento -->
                     <div class="form-group col-3">
                         <label for="sell_discount"><i class="fas fa-percentage"></i> Descuento </label>
-                        <input type="number" class="form-control" aria-describedby="sell_discount" name="descuento" id="descuento" placeholder="<%= product.descuento %>"/>
+                        <input type="number" 
+                        class="form-control" 
+                        aria-describedby="sell_discount" 
+                        name="descuento" 
+                        id="descuento" 
+                        value="<%= product.descuento %>"
+                        placeholder="<%= product.descuento %>"/>
                     </div>
                 </div>
 
