ya funciona el borrar usuario

--- a/views/detail_bebidas.ejs
+++ b/views/detail_bebidas.ejs
@@ -46,10 +46,10 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <small class="col-4 text-muted">
+                <small class="text-muted">
                     <div class="dropdown-divider"></div>
-                        <i class="far fa-address-card "></i> usuario vendedor id: <%= product.usuario.id %></br>
-                        <div class="dropdown-divider"></div>
+                    <i class="far fa-address-card"></i> usuario vendedor id: <%= product.usuario.id %></br>
+                    <div class="dropdown-divider"></div>
                 </small> 
             </div>
 
