--- a/views/detail_cursos.ejs
+++ b/views/detail_cursos.ejs
@@ -23,43 +23,44 @@
             <div class="media row d-flex align-items-center">
                 <div class="col-6 align-items-center d-flex justify-content-center mb-4">
                 <!--imagen-->
-                <img src="/upload/<%= product.imagen %>" alt="product image" width="200" class="product-detail-img" value="Show Images">
+                    <img src="/upload/<%= product.imagen %>" alt="product image" width="200" class="product-detail-img" value="Show Images">
                 </div>
                 
                 <div class="media-body col-6 border-left">
-                <!--cantidad-->
-                <h5 class="font-weight-light">Cantidad en Stock: <strong><%= product.stock %></strong></h4> 
-                <!--precio-->
-                <h5 class="font-weight-light"> Precio : <strong>$ <%= product.precioUnitario %></strong></h5>
-                <!--descuento-->
-                <span class=" bg-success text-white rounded-pill pr-2 pl-2 pt-1 pb-1">Descuento <%= product.descuento %>% <i class="fa fa-tag"></i></span>
-                <!--rating-->
-                <div class="star text-left p-2 d-none"> <!--desabilitado hasta que funcione como un rating-->
-                    <i class="fa fa-star"></i>
-                    <i classs="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <a class="link-comments" href=""><%= product.rating %> </a>
+                    <!--cantidad-->
+                    <h5 class="font-weight-light">Cantidad en Stock: <strong><%= product.stock %></strong></h4> 
+                    <!--precio-->
+                    <h5 class="font-weight-light"> Precio : <strong>$ <%= product.precioUnitario %></strong></h5>
+                    <!--descuento-->
+                    <span class=" bg-success text-white rounded-pill pr-2 pl-2 pt-1 pb-1">Descuento <%= product.descuento %>% <i class="fa fa-tag"></i></span>
+                    <!--rating-->
+                    <div class="star text-left p-2 d-none"> <!--desabilitado hasta que funcione como un rating-->
+                        <i class="fa fa-star"></i>
+                        <i classs="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <a class="link-comments" href=""><%= product.rating %> </a>
+                    </div>
                 </div>
-                </div>
-                <div class="row p-0 ml- m-auto justify-content-center">
-                    <small class="col-12 text-muted">
-                        <div class="dropdown-divider"></div>
-                        <i class="far fa-address-card "></i> usuario vendedor id: <%= product.usuario.id %></br>
-                        <div class="dropdown-divider"></div>
-                    </small> 
-                </div>
+            </div>    
+            <div class="row d-flex justify-content-center">
+                <small class="text-muted">
+                    <div class="dropdown-divider"></div>
+                    <i class="far fa-address-card "></i> usuario vendedor id: <%= product.usuario.id %></br>
+                    <div class="dropdown-divider"></div>
+                </small> 
+            </div>
 
                 <!-- comprar / agregar al carrito -->
-                <div class="col-12 d-flex justify-content-center mb-3">
+            <div class="col-12 d-flex justify-content-center mb-3">
                 <button type="submit" class="btn btn-outline-warning mr-2">
                     <i class="fa fa-shopping-cart"></i> Agregar al Carrito
                 </button>
                 <button type="submit" class="btn btn-outline-warning ml-2">
                     Comprar
                 </button>
-                </div>
+            </div>
             
                 <!--detalle de curso-->
                 <div class="row p-0 ml-3 mr-auto border-secondary p-4">
@@ -93,7 +94,7 @@
                 
                     <!--Buttom Alert-->
                 </div>    
-            </div>
+            
         </div>
       </div>
       
