--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -22,7 +22,7 @@
 
                 <a href="/products/form_prod"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
-                <a class="nav-link text-black-50" href="/product_cart"><i class="fas fa-shopping-basket"></i></a>
+                <a class="nav-link text-black-50" href="/carrito"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="/products/form_prod"><i class="far fa-heart"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="/auth/register">Registro</i></a>
                 <a class="nav-link text-black-50 d-none d-md-block active" href="/auth/login">Inicio de Sesión</i></a>
