--- a/views/detail_cursos.ejs
+++ b/views/detail_cursos.ejs
@@ -73,31 +73,30 @@
                             </div>
                             <div class="modal-footer">
                                 <a href="/products">
-                                    <button type="submit" class="btn btn-secondary" data-dismiss="modal"><i
-                                            class="fas fa-beer"></i> Seguir
-                                        comprando</button>
+                                    <button type="submit" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-beer"></i>
+                                        Seguir comprando</button>
                                 </a>
-                                <a href="/carrito">
-                                    <button type="submit" class="btn btn-primary"> <i
-                                            class="fas fa-shopping-basket"></i> Ir a carrito</button>
-                                </a>
+                                <form action="/carrito/<%= product.id%>" method="POST">
+                                    <a href="/carrito">
+                                        <button type="submit" class="btn btn-primary"> <i class="fas fa-shopping-basket"></i> Ir a
+                                            carrito</button>
+                                    </a>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                
                 <!-- comprar / agregar al carrito -->
                 <div class="col-12 d-flex justify-content-center mt-2 mb-3">
-                    <a href="#">
-                        <button type="submit" class="btn btn-outline-warning mr-2" id="btnModal">
-                            <i class="fa fa-shopping-cart"></i> Agregar al Carrito
-                        </button>
-                    </a>
+                
+                    <button type="submit" class="btn btn-outline-warning mr-2" id="btnModal">
+                        <i class="fa fa-shopping-cart"></i> Agregar al Carrito
+                    </button>
                     <button type="submit" class="btn btn-outline-warning ml-2">
                         Comprar
                     </button>
                 </div>
-
                 <!--detalle de curso-->
                 <div class="row p-0 ml-3 mr-auto border-secondary p-4">
                     <h3 class="col-12 font-weight-light">Detalle del Curso</h3>
