--- a/views/shop-cart.ejs
+++ b/views/shop-cart.ejs
@@ -1,121 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("partials/head", {title: "Registro"}) %>
+    <%- include("partials/head", {title: "Registro"}) %>
 
-  <body class="bg_color">
+    <body class="bg_color">
     <!--header/javi -->
     <%- include("partials/header") %>
 
     <!-- carrito/javi-->
     
     <section class="container bg-white mb-5 rounded-top">
-      <div class="row">
-        <!--Titulo-->
-        <article class="col-12 text-center mt-3">
-          <h2 class="title_categoria border-bottom">
-            <i class="fas fa-shopping-cart text-secondary"></i> - Carrito
-          </h2>
-        </article>
-        <div class="dropdown-divider"></div>
-        <% for( let i = 0; i < carrito.length; i++ ) { %>
-
-          
-
-        <!--Primer Producto en el carro-->
-        <article class="Product_cart col-12">
-          <div class="item-cart">
-            <!--imagen link a producto-->
-            <div
-              class="media align-items-center p-3 d-flex justify-content-between"
-            >
-              <a class="col-1 col-md-2 ml-2" href="#prduct_detail">
-                <img id="imagen_producto"
-                  src="/upload/<%= carrito[i].imagen %>"
-                  class="mr-3 w-100"
-                  alt="..."
-                />
-              </a>
-              <div class="col-5 media-body border-left pl-4">
-                <h5 class="mt-0"><%= carrito[i].nombre  %></h5>
-                <p><%= carrito[i].descripcion  %></p>
-                <h6 class="mt-0 text-info"><%= carrito[i].ibu %></h6>
-              </div>
-              <div
-                class="col-3 media-body d-flex justify-content-center align-items-stretch"
-              >
-                <!--cantidad // ver que significa todo ese choclo-->
-                <form
-                  class="cantidad_item rounded"
-                  action="cantidad_item"
-                  method="POST"
-                >
-                  <div class="def-number-input number-input safari_only">
-                    
-                    <input
-                      class="input" type="number" class="form-control" id="cantidad" value="3"
-                      
-                    />
-                    
-                  </div>
-                </form>
-              </div>
-              <!--precio-->
-              <div class="col-1 media-body justify-content-end">
-                <div id="precio" class="price_item">
-                  <span class="price_uni_item">
-                    <span class="price_symbol">$</span
-                    ><span  class="price_tag_total"><%= carrito[i].precioUnitario %></span>
-                  </span>
-                </div>
-              </div>
-              <div class="col-1 media-body justify-content-end">
-                <div id="precio" class="price_item">
-                  <span class="price_uni_item">
-                    <span class="price_symbol">$</span
-                    ><span  name="totalitem" class="price_tag_total"><%= carrito[i].precioUnitario * (4)%></span>
-                  </span>
-                </div>
-              </div>
-              <div class="col-1 media-body justify-content-end">               
-                <form action="/carrito/<%= carrito[i].id %>/delete?_method=delete" method="POST">
-                <button type="button" class="btn btn-warning">
-                    <span class="glyphicon glyphicon-remove"></span> <i class="far fa-trash-alt"></i>
-                </button>
-              </div>
-              </form>              
-            </div>
+        <div class="row">
+            <!--Titulo-->
+            <article class="col-12 text-center mt-3">
+                <h2 class="title_categoria border-bottom">
+                    <i class="fas fa-shopping-cart text-secondary"></i> - Carrito
+                </h2>
+            </article>
             <div class="dropdown-divider"></div>
-          </div>
-        </article>
+            <% for( let i = 0; i < carrito.length; i++ ) { %>
+            
+            <!--Primer Producto en el carro-->
+            <article class="Product_cart col-12">
+                <div class="item-cart">
+                    <div class="media align-items-center p-3 d-flex justify-content-between">
+                        <!--imagen - link a producto-->
+                        <a class="col-2 col-md-2 ml-2" href="/products/<%= carrito[i].id %>">
+                            <img id="imagen_producto"
+                            src="/upload/<%= carrito[i].imagen %>"
+                            class="mr-3 w-100"
+                            alt="<%= carrito[i].nombre  %>"
+                            />
+                        </a>
+                        <div class="col-7 media-body border-left pl-4">
+                            <h5 class="mt-0"><%= carrito[i].nombre  %></h5>
+                            <small  class="form-text text-muted"><%= carrito[i].descripcion  %></small>
+                            <h6 class="mt-0 text-info"><%= carrito[i].ibu %></h6>
+                        </div>
+                        <!--cantidad-->
+                        <div class="col-1 d-flex justify-content-center">
+                            <form
+                            class="cantidad_item rounded"
+                            action="cantidad_item"
+                            method="POST"
+                            >
+                            <small id="email" class="form-text text-muted"
+                            >Cantidad
+                            </small>
+                            <div class="def-number-input number-input safari_only">
+                                <input type="number" class="form-control" style="width: 80px" id="cantidad" value="1"/>
+                            </div>
+                            </form>
+                        </div>
+                    <!--precio-->
+                    <div class="col-1 justify-content-end">
+                        <div id="precio" class="price_item">
+                        <div class="price_uni_item">
+                            <small class="form-text text-muted">Precio</small>
+                            <p class="price_tag_total p-2 rounded bg-transparent mb-0" style="width: 100px">
+                                $ <%= carrito[i].precioUnitario %>
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--descuento-->
+                    <div class="col-1 justify-content-end">
+                        <div id="precio" class="price_item">
+                        <div class="price_uni_item">
+                            <small class="form-text text-muted">Descuento</small>
+                            <p class="price_tag_total p-2 rounded bg-transparent mb-0" style="width: 100px">% <%= carrito[i].descuento %></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--total-->
+                    <div class="col-1 justify-content-end">
+                        <div id="precio" class="price_item">
+                        <div class="price_uni_item">
+                            <small class="form-text text-muted">Total</small>
+                            <p class="price_tag_total p-2 rounded bg-transparent mb-0" style="width: 100px">$ <%= carrito[i].precioUnitario -(carrito[i].precioUnitario * carrito[i].descuento /100) %></p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-1 media-body justify-content-end">               
+                        <form action="/carrito/<%= carrito[i].id %> /delete?_method=delete" method="POST">
+                            <button type="submit" class="btn btn-warning">
+                                <span class="glyphicon glyphicon-remove"></span> <i class="far fa-trash-alt"></i>
+                            </button>
+                        </form>
+                    </div>
+                                  
+                    </div>
+                    <div class="dropdown-divider"></div>
+                </div>
+            </article>
 
-          <% } %>
-       
-        <article
-          class="price_total media col-12 col-sm-12 p-3 justify-content-center border-bottom"
-        >
-          <div class="col-11 col-lg-10 col-sm-4 text-right">
-            <p class="text-secondary">Total</p>
-            <h6 class="text-info">Descuento <strong>20%</strong></h6>
-            <h4 class="mt-0 text-warning">Total</h4>
-          </div>
-          <div class="col-1 col-lg-2 col-sm-4 text-left border-left">
-            <p class="text-secondary">
-                 $<%= toThousand(carrito.precioUnitario - (carrito.precioUnitario * (0/100))) %>
-            </p>
-            <h6 class="text-info"><strong>$ 623.20</strong></h6>
-            <h4 class="mt-0 text-warning">$ 2492.80</h4>
-          </div>
-        </article>
-        <article
-          class="comprar media bg-warning col-12 col-sm-12 p-3 ml-auto align-items-center rounded-bottom"
-        >
-          <div class="w-100 d-flex justify-content-center">
-            <!-- boton registrarse -->
-            <button type="submit" class="btn btn-light d-flex">Comprar</button>
-          </div>
-        </article>
-       
-      </div>
+            <% } %>
+        
+            <article
+            class="price_total media col-12 col-sm-12 p-3 justify-content-center border-bottom"
+            >
+            <div class="col-11 col-lg-10 col-sm-4 text-right">
+                <p class="text-secondary">Total</p>
+                <h6 class="text-info">Descuento <strong>20%</strong></h6>
+                <h4 class="mt-0 text-warning">Total</h4>
+            </div>
+            <div class="col-1 col-lg-2 col-sm-4 text-left border-left">
+                <p class="text-secondary">
+                    $<%= toThousand(carrito.precioUnitario - (carrito.precioUnitario * (0/100))) %>
+                </p>
+                <h6 class="text-info"><strong>$ 623.20</strong></h6>
+                <h4 class="mt-0 text-warning">$ 2492.80</h4>
+            </div>
+            </article>
+            <article
+            class="comprar media bg-warning col-12 col-sm-12 p-3 ml-auto align-items-center rounded-bottom"
+            >
+            <div class="w-100 d-flex justify-content-center">
+                <!-- boton registrarse -->
+                <button type="submit" class="btn btn-light d-flex">Comprar</button>
+            </div>
+            </article>
+        
+        </div>
     </section>
 
     <!--footer/fran -->
